// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates new organization 1`] = `
<NewOrganizationForm
  onDelete={[Function]}
  onDone={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="input-super-large spacer-right text-middle"
      maxLength={32}
      minLength={2}
      onChange={[Function]}
      placeholder="onboarding.organization.placeholder"
      required={true}
      type="text"
      value=""
    />
    <button
      className="text-middle"
      disabled={true}
    >
      create
    </button>
    <div
      className="note spacer-top abs-width-300"
    >
      onboarding.organization.key_requirement
    </div>
  </form>
</NewOrganizationForm>
`;

exports[`creates new organization 2`] = `
<NewOrganizationForm
  onDelete={[Function]}
  onDone={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="input-super-large spacer-right text-middle"
      maxLength={32}
      minLength={2}
      onChange={[Function]}
      placeholder="onboarding.organization.placeholder"
      required={true}
      type="text"
      value="foo"
    />
    <i
      className="spinner text-middle"
    />
    <div
      className="note spacer-top abs-width-300"
    >
      onboarding.organization.key_requirement
    </div>
  </form>
</NewOrganizationForm>
`;

exports[`creates new organization 3`] = `
<NewOrganizationForm
  onDelete={[Function]}
  onDone={[Function]}
>
  <div>
    <span
      className="spacer-right text-middle"
    >
      foo
    </span>
    <DeleteButton
      className="button-small"
      onClick={[Function]}
    >
      <ButtonIcon
        className="button-small"
        color="#d4333f"
        onClick={[Function]}
      >
        <button
          className="button-small button-icon"
          onClick={[Function]}
          style={
            Object {
              "color": "#d4333f",
            }
          }
        >
          <ClearIcon />
        </button>
      </ButtonIcon>
    </DeleteButton>
  </div>
</NewOrganizationForm>
`;

exports[`deletes organization 1`] = `
<NewOrganizationForm
  onDelete={[Function]}
  onDone={[Function]}
>
  <div>
    <span
      className="spacer-right text-middle"
    >
      foo
    </span>
    <DeleteButton
      className="button-small"
      onClick={[Function]}
    >
      <ButtonIcon
        className="button-small"
        color="#d4333f"
        onClick={[Function]}
      >
        <button
          className="button-small button-icon"
          onClick={[Function]}
          style={
            Object {
              "color": "#d4333f",
            }
          }
        >
          <ClearIcon />
        </button>
      </ButtonIcon>
    </DeleteButton>
  </div>
</NewOrganizationForm>
`;

exports[`deletes organization 2`] = `
<NewOrganizationForm
  onDelete={[Function]}
  onDone={[Function]}
>
  <div>
    <span
      className="spacer-right text-middle"
    >
      foo
    </span>
    <i
      className="spinner text-middle"
    />
  </div>
</NewOrganizationForm>
`;

exports[`deletes organization 3`] = `
<NewOrganizationForm
  onDelete={[Function]}
  onDone={[Function]}
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="input-super-large spacer-right text-middle"
      maxLength={32}
      minLength={2}
      onChange={[Function]}
      placeholder="onboarding.organization.placeholder"
      required={true}
      type="text"
      value=""
    />
    <button
      className="text-middle"
      disabled={true}
    >
      create
    </button>
    <div
      className="note spacer-top abs-width-300"
    >
      onboarding.organization.key_requirement
    </div>
  </form>
</NewOrganizationForm>
`;
